--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.1.2
   path: ^1.8.0
-  sqflite: ^2.0.0+3
+  sqflite: 2.0.0+3
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/data/
+    - assets/data/cifras/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
